# InfinityApp

./: .gitignore  README.md  ROADMAP.md  create_db.sql  infinityApp  main.py  term_info.py  version_hs.code-workspace  version_py.code-workspace  words.py
data/: users.txt
version_hs/: .ghci  .gitignore  CHANGELOG.md  infinityApp.cabal  version_hs.code-workspace
version_hs/app/: Main.hs
version_hs/data/: users
version_hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
version_hs/src/: Animations.hs  Config.hs  Forms.hs  ScreenControl.hs  User.hs
version_hs/src/Forms/: Chat.hs  ChatForm.hs  Default.hs  Games.hs  Login.hs  LoginForm.hs  Menu.hs  MenuForm.hs  Register.hs  RegisterForm.hs
version_hs/trash/: fanout
version_hs/unused_code/: fanout.md
version_py/: .gitignore  CHANGELOG.MD  how_fill_files.md  main.py  requirements.txt  term_info.py
version_py/data/: users.txt
version_py/instructions/: term_info.py
version_py/src/: User.py  chat_form.py  config.py  forms.py  login_form.py  menu_form.py  registration_form.py
version_py/src/trash/: trash.py
