cabal-version:      3.0

name:               infinityApp
version:            0.1.0.0
license:            BSD-3-Clause
author:             homaander
maintainer:         hom.ander23@gmail.com
build-type:         Simple


library
  hs-source-dirs:
      src
  exposed-modules:
      Config
      User
      Forms.Menu
      Forms.Register
      Forms.Login
      Forms.Chat

  default-extensions:
      TypeApplications
      OverloadedStrings

  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , sqlite-simple

  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

  default-language: Haskell2010


executable infinityApp-exe
    hs-source-dirs:
      app
    main-is:
      Main.hs

    default-extensions:
      TypeApplications
      OverloadedStrings

    build-depends:
        base ^>=4.20.0.0
      , ansi-terminal
      , sqlite-simple

      , infinityApp

    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

    default-language: Haskell2010
